# ydl-v2-api

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
authentication/: schema.py
ydl_auth/: admin.py  apps.py  models.py  schema.py  serializers.py
ydl_auth/migrations/: 0001_initial.py
ydl_v2_api_gql/: schema.py  settings.py  urls.py  wsgi.py
