[tool.poetry]
name = "ydl-v2-api-gql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
graphene-django = "^2.5"
django-graphql-jwt = "^0.2.2"
djangorestframework = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
